--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,45 +1,44 @@
-html, body {
-   max-width: 100%;
+html {
+  max-width: 2100px;
+   min-width: 1800px;
    overflow-x: hidden;
    background-color: rgb(158, 165, 165);
- }
+}
  header {
-     width: 100%;
-     margin-top: -7px;
-     margin-left: -5px;
-     margin-right: 0px;
-     height: 100px;
-     position: fixed;
-     background-color: rgb(125, 150, 128);
-     box-shadow: 15px 15px 10px rgb(17, 16, 16);
-     z-index: 1;
+    align-self: center;
+    width: 100%;
+    margin-top: 0%;
+    margin-left: auto;
+    margin-right: auto;
+    position: fixed;
+    background-color: rgb(125, 150, 128);
+    box-shadow: 15px 15px 10px rgb(17, 16, 16);
+    z-index: 1;
     }
 
- nav li {
-     display: inline;
-     margin: 180px;
-
+ header nav li {
+  display: inline;
+  margin-inline: 10%;
  }
- nav li a{
- color:black;
- font-size: 20px;
+ header nav li a{
+  color:black;
+  font-size: 20px;
  }
- #title{
+ 
+ header nav #title{
    font-family: cursive, Geneva, Tahoma, sans-serif;
    width: 100%; 
    font-size: 50px;
    font-weight: bold;
    color: black;
    text-align: center;
-   margin-top: -15px;
+   margin-top: auto;
+   margin-bottom: 0%;
      }
   #desc{
      box-shadow: 15px 15px 10px rgb(17, 16, 16);
-     height: 100px;
      align-items: center;
-     padding-top: 0px;
-     margin-top: 10px;
-     margin-left: 10%;
+     margin: auto; 
      width: 80%;
      background-color: rgb(129, 160, 155);
  }
@@ -60,13 +59,10 @@ html, body {
      color: black;
  }
  #W img{
-     box-shadow: 15px 15px 10px rgb(17, 16, 16);
-     width: 100%;
-     margin-top: 0px;
-     margin-left: 30%;
-     image-orientation: center;
-     height: 875px;
-     width: 900px;
+    box-shadow: 15px 15px 10px rgb(17, 16, 16);
+    margin-top: 7%;
+    margin-left: 33%;
+    margin-right: 33%;
  }
  #mainpictures{
    width: 60%;
