--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,12 +1,12 @@
 html {
-  max-width: 2100px;
-   min-width: 1800px;
-   overflow-x: hidden;
+  width: 90%;
+  margin: 0 auto;
+   
    background-color: rgb(158, 165, 165);
 }
  header {
     align-self: center;
-    width: 100%;
+    width: 90%;
     margin-top: 0%;
     margin-left: auto;
     margin-right: auto;
@@ -58,11 +58,14 @@ html {
      letter-spacing: 0em;
      color: black;
  }
- #W img{
+ img.align-center{
+   display: block;
+   margin: 0px auto;
     box-shadow: 15px 15px 10px rgb(17, 16, 16);
-    margin-top: 7%;
-    margin-left: 33%;
-    margin-right: 33%;
+ }
+ img.medium {
+   width: 900px;
+   height: 900px;
  }
  #mainpictures{
    width: 60%;
