I believe I have done all but ad the @media stuff and accessability stuff. resized all the pics

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -64,3 +64,8 @@ button {
   background-color: rgb(99, 128, 128);
   border-radius: 30px;
 }
+#footer {
+  display: inline;
+  padding-left: 20px;
+  padding-right: 20px;
+}
