--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,11 +1,18 @@
 html, body{
-  max-width: 1600px;
+  max-width: 1900px;
   background-color: rgb(99, 133, 133);
 }
 #topbox, #headingbox, .grid_8 {
   border-radius: 30px;
   box-shadow: 15px 15px 10px rgb(17, 16, 16);
   background-color: rgb(84, 128, 128);
+}
+#totop {
+  
+  position: fixed;
+  z-index: 10;
+  margin-top: 18%;
+  margin-left: 42%;
 }
 
 #header {
@@ -68,4 +75,9 @@ button {
   display: inline;
   padding-left: 20px;
   padding-right: 20px;
+}
+@media only screen and (max-width: 480px) {
+  #nav {
+    font-size: 40px;
+  }
 }
