--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -78,6 +78,9 @@ button {
 }
 @media only screen and (max-width: 480px) {
   #nav {
-    font-size: 40px;
+    font-size: 50px;
+  }
+  #totop {
+    margin-top: 30%;
   }
 }
