--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -76,7 +76,7 @@ button {
   padding-left: 20px;
   padding-right: 20px;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 480px), (orientation: portrait){
   #nav {
     font-size: 50px;
   }
