--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -76,6 +76,14 @@ button {
   padding-left: 20px;
   padding-right: 20px;
 }
+@media only screen and (max-width: 480px), (orientation: landscape){
+  #nav {
+    font-size: 50px;
+  }
+  #totop {
+    margin-top: 5%;
+  }
+}
 @media only screen and (max-width: 480px), (orientation: portrait){
   #nav {
     font-size: 50px;
