--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -77,7 +77,7 @@ button {
   padding-right: 20px;
 }
 @media (max-width: 480px), (orientation: landscape) {
-  #nav {
+  li {
     font-size: 50px;
   } 
   #totop {
@@ -85,7 +85,7 @@ button {
   }
 }
 @media (max-width: 480px), (orientation: portrait) {
-  #nav {
+  li {
     font-size: 50px;
   }
 }
