--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -72,13 +72,17 @@ button {
   border-radius: 30px;
 }
 #footer {
-  display: inline;
-  padding-left: 20px;
-  padding-right: 20px;
+  display: inline-flex;
+  }
+
+.foot {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 @media (max-width: 480px), (orientation: landscape) {
   li {
-    font-size: 30px;
+    font-size: 40px;
+    font-weight: bold;
   } 
   #totop {
     margin-top: 5%;
@@ -86,6 +90,22 @@ button {
 }
 @media (max-width: 480px), (orientation: portrait) {
   li {
-    font-size: 30px;
+    font-size: 40px;
+    font-weight: bold;
   }
+}
+.facebook {
+  margin-left: 10px;
+  margin-right: 5px;
+}
+.instagram {
+  margin-left: 5px;
+  margin-left: 10px;
+}
+/* Add a hover effect if you want */
+.facebook:hover {
+  opacity: 0.7;
+}
+.instagram:hover {
+  opacity: 0.7;
 }
