--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,6 +1,11 @@
 html body{
   max-width: 2000px;
-  background-image: url(../images/background.jpeg);
+  background-image: url(../images/Aus.jpeg);
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
   align-content: center;
 }
 
@@ -128,6 +133,10 @@ h2 {
   font-size: 2.5rem;
   text-align: center;
 }
+em {
+  text-decoration: underline;
+  color:#cee5f0 ;
+}
 
 /* EXPERIENCE BOX */
 .experience {
@@ -139,6 +148,7 @@ h2 {
   color:#f0edce ;
   word-spacing: 0.2rem;
   }
+
   #jobs, #skillset{
     margin-left: 2%;
   }
