--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -13,198 +13,94 @@ html body{
 .gridbody {
   display: grid;
   grid-column-start: 1;
-  grid-column-end: 13;
-  grid-row-start: 1;
-  grid-row-end: auto;
+  grid-column-end: 12;
 }
-.gridbody .nav {
+.gridbody .heading {
   grid-column-start: 1;
   grid-column-end: 12;
-  grid-row-start: 1;
-  grid-row-end: 2;
 }
-.gridbody .about{
+.gridbody .navigation {
   grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 3;
-  grid-row-end: 6;
-  margin: 1%;
-}
-.gridbody .upperside {
-  grid-column-start: 9;
   grid-column-end: 12;
-  grid-row-start: 3;
-  grid-row-end: 6;
-  margin: 1%; 
-}
-.gridbody .side{
-  grid-column-start: 9;
-  grid-column-end: 12;
-  grid-row-start: 7;
-  grid-row-end: 15;
-  margin: 1%;
-}
-.gridbody .experience {
-  grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 7;
-  grid-row-end: 10;
-  margin: 1%;
-  border-color:#f0edce ;
-}
-.gridbody .skills {
-  grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 11;
-  grid-row-end: 14;
-  margin: 1%;
 }
 .gridbody .footer {
-  background-color:rgba(13, 16, 44, 0.9);   
+  background-color:rgba(13, 16, 44, 0.7);   
   grid-column-start: 1;
   grid-column-end: 12;
-  grid-row-start: 15;
-  grid-row-end: 16;
-  margin: 1%;
 }
-/* NAVIGATION BAR */
-.nav {
-  display: inline-flex;
-  height: auto;
+
+/* HEADING BAR */
+.heading {
+  display: flex;
   width: 100%;
-  
+  height: 9.5rem;   
 }
-.nav #one {
-  width: auto;
-  text-align: center;
+.heading #headingname {
+  width: 70%;
+  margin-left: 3%;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 4.5rem;
-  margin-left: 1%;
-  margin-top: 20px;
-  margin-right: 1%;
-  color: #f3f6f7;
- }
-.nav #two, #three, #back {
-  background-color:rgba(240, 237, 206, 0.7);
-  width: 10%;
-  margin: 1% 3% 3% 3%;
-  font-size: 1.4rem;
+  color: whitesmoke;
 }
-
-/* ABOUT ME BOX */
-.about {
-  display:flex;
-}
-.about #aboutimg {
-  margin: 1%;
-  border-radius: 10%;
-  width: 200px;
-  height: 300px;
-  box-shadow: 15px 15px 10px #3e3e6d;
-}
-.upperside {
-  background-color:rgba(13, 16, 44, 0.7);
-  border-radius: 30px;
-  width: auto;
+.heading #headingimg{
+  max-width: 20%;
+  min-width: 1%;
   height: auto;
-  color:rgb(240, 237, 206) ;
+}
+.navigation {
+  display: inline;  
+  margin-top: 10%;
+  width: 100%;
+}
+.navigation .nav{
+  float: right;
+  align-items: left;
+  width: 20%;
+}
+button {
+  background-color:rgba(136, 227, 243, 0.13);
+  width: 70%;
+  margin: 1% 1% 2% 2%;
+  font-size: 1rem;
 }
 
-.collection #inspect, #porsche1, #porsche2, #enterprise {
-  width: 45%;
-  margin: 1%;
+/* FOOTER */
+.footer {
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3.5rem;           
 }
-
-.about .info {
-  padding-left: 5%;
-  padding-right: 5%;
-  background-color:rgba(13, 16, 44, 0.7);
-  border-radius: 30px;
-  width: auto;
-  height: auto;
+.name {
   color:#f0edce ;
-  line-height: 1.4rem;
-  word-spacing: 0.3rem;
-  letter-spacing: 0.1rem;
-  font-size: 1.1rem;
-  text-align: left;
 }
-h2 {
-  font-size: 2.5rem;
-  text-align: center;
+ 
+@media(max-width: 1000px) {
+  button {
+    font-size: 1rem;
+    width: 130%;
+    margin-left: -55%;
+  }
 }
-em {
-  text-decoration: underline;
-  color:#cee5f0 ;
-}
-
-/* EXPERIENCE BOX */
-.experience {
-  display: block;
-  background-color:rgba(13, 16, 44, 0.7);
-  border-radius: 30px;
-  width: auto;
-  height: auto;
-  color:#f0edce ;
-  word-spacing: 0.2rem;
+@media(max-width: 500px) {
+  .heading #headingname {
+    font-size: 3.5rem;
   }
-
-  #jobs, #skillset{
-    margin-left: 2%;
-  }
-
-  /* CERTIFICATIONS BOX */
-  .side {
-    background-color:rgba(13, 16, 44, 0.7);
-    border-radius: 30px;
-    width: auto;
-    height: auto;
-    color:#f0edce ;
-  }
-  .cert, .skill, .exp .collection{
-    text-align: center;
-    display: block;
-    margin-top: 1%;
-  }
-  .cert #lcline, #lcss, #lcssint, #lhtml, #lp3, #lweb {
-    width: 40%;
-    margin: 1%;
-  }
-
-  /* SKILLS BOX */
-  .skills {
-    display:block;
-    background-color:rgba(13, 16, 44, 0.7);
-    border-radius: 30px;
-    width: auto;
-    height: auto;
-    color:#f0edce ;
-    letter-spacing: 0.2rem;
-   
+  .heading #headingimg{
+    max-width: 30%;
    }
-   .skills #skillset{
-     display: grid;
-     grid-column-start: 1;
-     grid-column-end: 3;
-    }
-    .skills #skillset #col1 {
-      grid-column-start: 1;
-      grid-column-end: 2;
-    }
-    .skills #skillset #col2{
-      grid-column-start: 2;
-      grid-column-end: 3;
-    }
-   
-
-    /* FOOTER */
-    .footer {
-      display: flex;
-      justify-content: space-around;
-    }
-    .name {
-      color:#f0edce ;
-    }
-    
+   button {
+     margin-left: -55%;
+   }
+}
+@media screen and (max-width: 480px) {
+  button {
+    font-size: 1.3rem;
+    width: 160%;
+    margin-left: -55%;
+  }
+}
    
   
