--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -64,10 +64,10 @@ html body{
 }
 .home button {
   background-color:rgba(136, 227, 243, 0.13);
-  width: 70%;
-  margin-left: 1%;
-  margin-right: 1%;
-  font-size: 1rem;
+  width: 300px;
+  margin-right: 10%;
+  margin-left: -20%;
+  font-size: 1.3rem;
   margin-top: 5%;
   margin-bottom: 5%;
 }
@@ -93,31 +93,48 @@ html body{
 .name {
   color:#f0edce ;
 }
- 
-@media(max-width: 1000px) {
-  button {
-    font-size: 1rem;
-    width: 130%;
-    margin-left: -55%;
+
+@media(max-width: 1900px) {
+  .home button {
+    margin-left: -40%;
   }
 }
-@media(max-width: 500px) {
+ 
+@media(max-width: 1000px) {
+  .home button {
+    background-color:rgba(136, 227, 243, 0.863); 
+    font-size: 1.3rem;
+    width: 300px;
+    
+  }
+  .portfolio button {
+    font-size: 1.3rem;
+    width: 200%;
+  }
+  .navigation .home{
+    float: left;
+}
+@media(max-width: 480px) {
   .heading #headingname {
     font-size: 3.5rem;
   }
   .heading #headingimg{
     max-width: 30%;
    }
-   button {
-     margin-left: -55%;
+   .home button {
+    background-color:rgba(136, 227, 243, 0.863); 
+    font-size: 2.3rem;
+    width: 300px;
+    margin-right: 5%;
    }
-}
-@media screen and (max-width: 480px) {
-  button {
+   .portfolio button {
     font-size: 2.3rem;
     width: 260%;
-    margin-left: -95%;
-  }
+    
+   }
+   .navigation .home{
+    float: left;
+   }
 }
    
   
