--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -47,20 +47,19 @@ html body{
   min-width: 1%;
   height: auto;
 }
-.navigation {
-  display: inline;  
-  margin-top: 10%;
-  width: 100%;
-}
 .navigation .home{
   float: right;
   align-items: left;
   width: 20%;
+  display: inline;  
+  margin-top: 10%;
 }
 .navigation .portfolio{
-  float: left;
-  align-items: left;
-  width: 20%;
+  width: 70%;
+  float: right;
+  align-items: center;
+  display: flex; 
+  margin-top: -5%; 
 }
 .home button {
   background-color:rgba(136, 227, 243, 0.13);
@@ -73,12 +72,10 @@ html body{
 }
 .portfolio button {
   background-color:rgba(136, 227, 243, 0.863);
-  width: 70%;
+  width: 200px;
   margin-left: 1%;
   margin-right: 1%;
   font-size: 1rem;
-  margin-top: 5%;
-  margin-bottom: 5%;
 }
 
 /* FOOTER */
@@ -94,28 +91,34 @@ html body{
   color:#f0edce ;
 }
 
-@media(max-width: 1900px) {
-  .home button {
-    margin-left: -40%;
+@media(max-width: 1620px) {
+  .heading #headingname {
+    margin-top: -15px;
+    font-size: 3.5rem;
+  }
+  .navigation .portfolio {
+    margin-right: -7%;
+    width: 100%;
   }
 }
  
-@media(max-width: 1000px) {
+@media(max-width: 950px) {
   .home button {
     background-color:rgba(136, 227, 243, 0.863); 
     font-size: 1.3rem;
     width: 300px;
-    
-  }
-  .portfolio button {
-    font-size: 1.3rem;
-    width: 200%;
   }
   .navigation .home{
     float: left;
+  }
+  .navigation .portfolio {
+    display: block;
+    margin-right: -150px;
+    margin-top: -100px;
+    width: 100%;
+  }
 }
-}
-@media(max-width: 480px) {
+@media(max-width: 600px) {
   .heading #headingname {
     font-size: 3.5rem;
   }
@@ -128,10 +131,6 @@ html body{
     width: 300px;
     margin-right: 5%;
    }
-   .portfolio button {
-    font-size: 2.3rem;
-    width: 260%;
-  }
    .navigation .home{
     float: left;
    }
