--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -88,8 +88,9 @@ html body{
 @media(max-width: 950px) {
   .home button {
     background-color:rgba(248, 248, 244, 0.774);
-    font-size: 1.3rem;
+    font-size: 2rem;
     width: 300px;
+    height: 100px;
   }
   .navigation .home{
     align-items: center;
