Added the rest of my Certificates

--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -63,7 +63,8 @@ html body {
   text-align: center;
   font-size: 2rem;
   font-weight: 800;
-  color:rgb(62, 211, 107) ;
+  color:rgb(62, 211, 107);
+  width: 95%;
 }
 .p{
   font-family: 'Times New Roman', Times, serif;
@@ -81,8 +82,9 @@ html body {
   line-height: 1.2rem;
   word-spacing: 1;
   font-weight: bold;
-  color:whitesmoke ;
-  margin-right: 4%;
+  color:whitesmoke;
+  margin-left: 15%;
+  width: 60%;
 }
 /*SWIFT BODY OF WORK*/
 .swiftbody .h2, .p{
@@ -129,6 +131,22 @@ html body {
   margin-bottom: 2%;
   width: 42%;
 }
+.C2 img {
+  display: inline;
+  margin-right: 1%;
+  margin-left: 3%;
+  margin-top: 1%;
+  margin-bottom: 2%;
+  width: 42%;
+}
+.C3 img {
+  margin-right: 1%;
+  margin-left: 25%;
+  margin-top: 1%;
+  margin-bottom: 2%;
+  width: 42%;
+}
+
 
 /* FOOTER */
 .footer {
