--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -175,13 +175,28 @@ html body {
   color:rgb(62, 211, 107);
   padding-left: 2%;
 }
-.E1 .ph4 {
+.ph4 {
   text-align: left;
   font-size: 2rem;
   font-weight: 800;
   color:rgb(62, 211, 107);
   padding-left: 2%;
   width: 95%;
+}
+.responsibilities{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.1rem;
+  line-height: 1.5rem;
+  word-spacing: 1;
+  letter-spacing: 0.07rem;
+  font-weight: bold;
+  color:whitesmoke ;
+  margin-right: 4%;
+}
+.E1, .E2, .E3, .E4, .E5, .E6 {
+  background-color: rgb(55, 58, 58);
+  padding-top: 2%;
+  padding-bottom: 3%;
 }
 
 
