--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -24,6 +24,7 @@ html body {
   height: auto;
   height: 9.5rem;   
   position: fixed;
+  box-shadow: 15px 15px 10px rgb(17, 16, 16);
  }
 .heading #headingname {
   margin-right: 5%;
@@ -198,6 +199,7 @@ html body {
   background-color: rgb(55, 58, 58);
   padding-top: 2%;
   padding-bottom: 3%;
+  box-shadow: 15px 15px 10px rgb(17, 16, 16);
 }
 .E7 {
   text-align: left;
@@ -206,6 +208,7 @@ html body {
   padding-top: 2%;
   padding-bottom: 3%;
   float: right;
+  box-shadow: 15px 15px 10px rgb(17, 16, 16);
 }
 .about {
   font-family: 'Times New Roman', Times, serif;
