--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -21,8 +21,7 @@ html body {
   background-color:whitesmoke;
   display: flex;
   width: 100%;
-  height: auto;
-  height: 9.5rem;   
+  height: 180px;   
   position: fixed;
   box-shadow: 15px 15px 10px rgb(17, 16, 16);
  }
@@ -31,11 +30,6 @@ html body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 4.5rem;
   color: black;
-}
-.heading #headingimg{
-  margin-right: 5%;
-  width: 100px;
-  height: auto;
 }
 .heading .nav {
   width: 150%;
@@ -245,28 +239,31 @@ html body {
 }
 @media(max-width: 1000px) {
   .heading {
+    max-width: 1000px;
     margin: 1%;
-    height: auto;
+    height: 200px;
     position: fixed;
   }
   .heading #headingname {
     text-align: center;
     font-size: 3.5rem;
   }
-  .heading .portfolio {
+  /*.heading .portfolio {
   margin-right: -7%;
   width: 100%;
-  }
+  }*/
   .heading .portfolio button {
-    background-color:rgba(136, 227, 243, 0.863);
-    font-size: 1.3rem;
-    width: 200px;
-    height: 50px;
+    display: inline;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.6rem;
+    height: 65px;
   }
-  .heading #headingimg{
-    margin-right: 5%;
-    width: 100px;
-    height: 150px;
+  .heading .nav {
+    width: 100%;
+    margin-left: 1%;
+    margin-right: 0%;
+    margin-top: 1%;
   }
   .mainbody {
     margin-top: 280px;
@@ -282,6 +279,18 @@ html body {
   .S3 img {
     margin-left: 25%;
     width: 50%;
+  }
+  .C1 img {
+    margin-left: 15%;
+    width: 60%;
+  }
+  .C2 img {
+    margin-left: 15%;
+    width: 60%;
+  }
+  .C3 img {
+    margin-left: 15%;
+    width: 70%;
   }
 }
  
